# IrradianceMap

./: CMakeLists.txt  README  main.c  main.cpp
cmake_modules/: FindFreeImage.cmake
